--- a/public/index.html
+++ b/public/index.html
@@ -28,11 +28,20 @@
       </form>
       <div id="commentsList"></div>
     </section>
+<section id="about">
+  <h1>O nas</h1>
+  <p>Witamy na naszej stronie poświęconej światu gier! 🎮</p>
+  <p>Jesteśmy pasjonatami gamingu i tworzymy miejsce, w którym znajdziesz najnowsze informacje, zapowiedzi oraz premiery z branży gier komputerowych i konsolowych.</p>
+  <p>Regularnie publikujemy <strong>nowinki ze świata gier</strong>, a także <strong>rzetelne recenzje</strong>, które pomogą Ci zdecydować, czy warto zagrać w daną produkcję.</p>
+  <p>Naszą misją jest dzielenie się pasją do gier i budowanie społeczności graczy, którzy chcą być na bieżąco.</p>
 
-    <section id="about">
-      <h1>O nas</h1>
-      <p>Jesteśmy pasjonatami pisania i dzielenia się wiedzą. Zapraszamy do lektury naszych wpisów!</p>
-    </section>
+  <hr>
+
+  <h2>📬 Kontakt</h2>
+  <p>Masz pytania, sugestie lub chcesz się z nami skontaktować?</p>
+  <p><strong>Administrator strony:</strong> <a href="mailto:admin@twojblogzgrami.pl">admin@twojblogzgrami.pl</a></p>
+  <p><strong>Współpraca / reklama:</strong> <a href="mailto:wspolpraca@twojblogzgrami.pl">wspolpraca@twojblogzgrami.pl</a></p>
+</section>
   </div>
 
   <script src="script.js"></script>
