--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,8 @@
 
   <h2>📬 Kontakt</h2>
   <p>Masz pytania, sugestie lub chcesz się z nami skontaktować?</p>
-  <p><strong>Administrator strony:</strong> <a href="mailto:admin@twojblogzgrami.pl">admin@twojblogzgrami.pl</a></p>
-  <p><strong>Współpraca / reklama:</strong> <a href="mailto:wspolpraca@twojblogzgrami.pl">wspolpraca@twojblogzgrami.pl</a></p>
+  <p><strong>Administrator strony:</strong> <a href="mailto:blog4games.adm@gmail.com">blog4games.adm@gmail.com</a></p>
+  <p><strong>Współpraca / reklama:</strong> <a href="mailto:blog4games.wspolpraca@gmail.com">blog4games.wspolpraca@gmail.com</a></p>
 </section>
   </div>
 
