--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,14 @@
   <input type="text" id="chatUsername" placeholder="Podaj swój nick" />
   <div id="chatWindow"></div>
   <input type="text" id="chatMessage" placeholder="Wpisz wiadomość" onkeydown="sendMessage(event)" />
+  <section id="discussion">
+  <h1>Dyskusja</h1>
+  <input type="text" id="chatUsername" placeholder="Podaj swój nick" />
+  <div id="chatWindow"></div>
+  <input type="text" id="chatMessage" placeholder="Wpisz wiadomość" onkeydown="sendMessage(event)" />
+  <button onclick="clearChat()">🧹 Wyczyść czat</button>
+</section>
+
 </section>
   </div>
 
