--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,8 @@
 
 </section>
   </div>
-
+  
+  <script src="/socket.io/socket.io.js"></script>
   <script src="script.js"></script>
   <script src="/socket.io/socket.io.js"></script>
 
