--- a/public/index.html
+++ b/public/index.html
@@ -43,18 +43,18 @@
   <p><strong>Administrator strony:</strong> <a href="mailto:blog4games.adm@gmail.com">blog4games.adm@gmail.com</a></p>
   <p><strong>Współpraca / reklama:</strong> <a href="mailto:blog4games.wspolpraca@gmail.com">blog4games.wspolpraca@gmail.com</a></p>
 </section>
-<section id="discussion">
+<section id="discussion" class="section">
   <h1>Dyskusja</h1>
+
   <input type="text" id="chatUsername" placeholder="Podaj swój nick" />
+
   <div id="chatWindow"></div>
-  <input type="text" id="chatMessage" placeholder="Wpisz wiadomość" onkeydown="sendMessage(event)" />
-  <section id="discussion">
-  <h1>Dyskusja</h1>
-  <input type="text" id="chatUsername" placeholder="Podaj swój nick" />
-  <div id="chatWindow"></div>
-  <input type="text" id="chatMessage" placeholder="Wpisz wiadomość" onkeydown="sendMessage(event)" />
+
+  <input type="text" id="chatMessage" placeholder="Wpisz wiadomość" />
+  <button onclick="sendChatMessage()">💬 Wyślij</button>
   <button onclick="clearChat()">🧹 Wyczyść czat</button>
 </section>
+
 
 </section>
   </div>
