--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,41 @@
       <h1>Witamy na blogu!</h1>
       <div id="posts"></div>
     </section>
+<article class="blog-post">
+  <h2>Don't Scream – horror, który uciszy cię na dobre</h2>
+
+  <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/2621320/header.jpg" alt="Don't Scream – las nocą" style="width: 100%; border-radius: 16px; margin-bottom: 1rem;">
+
+  <p><strong>Don't Scream</strong> to nietypowy horror, w którym mikrofon staje się Twoim największym wrogiem.</p>
+  <p>Gra wrzuca Cię do mrocznego lasu na 18 minut i mówi tylko jedno: <strong>nie krzycz</strong> – bo każdy dźwięk kończy rozgrywkę.</p>
+  <p>Bez HUD-u, bez przeciwników – tylko Ty, kamera i dźwięki, które z czasem rozrywają psychikę.</p>
+  <p>Twórcy mistrzowsko budują napięcie przez szelesty, szepty i cienie czające się gdzieś w tle.</p>
+  <p>Zaskakuje też jakość – grafika i dźwięk trzymają wysoki poziom jak na indie horror.</p>
+  <p>Rozgrywka jest krótka, ale każda sesja różni się dzięki losowym wydarzeniom.</p>
+  <p>To bardziej doświadczenie niż gra, idealne dla fanów klimatu <em>Blair Witch</em> i psychologicznego strachu.</p>
+  <p><strong>Don't Scream nie pyta, czy się boisz – ono sprawdza, czy masz odwagę milczeć.</strong></p>
+
+  <section class="rating" style="margin-top: 2rem;">
+    <h3>Ocena końcowa 🎮</h3>
+    <p><strong>8/10</strong> – krótka, intensywna i nieprzewidywalna. Pomysłowa perełka wśród gier niezależnych.</p>
+  </section>
+
+  <section class="recommended" style="margin-top: 1.5rem;">
+    <h4>Polecam, jeśli:</h4>
+    <ul>
+      <li>Lubisz horrory psychologiczne i minimalizm.</li>
+      <li>Podobał Ci się klimat <em>Blair Witch</em>, <em>Outlast</em> lub <em>Phasmophobia</em>.</li>
+      <li>Chcesz sprawdzić swoją odporność psychiczną... i mikrofon.</li>
+      <li>Szukasz gry idealnej na streama lub nagranie z reakcją.</li>
+    </ul>
+  </section>
+
+  <footer class="tags" style="margin-top: 2rem;">
+    <span>#Horror</span>
+    <span>#IndieGame</span>
+    <span>#DontScream</span>
+    <span>#Recenzja</span>
+    <span>#
 
     <section id="comments">
       <h1>Komentarze</h1>
