--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,7 @@
 
   <div class="container">
     <section id="blog" class="active">
-      <h1>Witamy na blogu!</h1>
-      <div id="posts"></div>
-    </section>
-<article class="blog-post">
+      <article class="blog-post">
   <h2>Don't Scream – horror, który uciszy cię na dobre</h2>
 
   <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/2621320/header.jpg" alt="Don't Scream – las nocą" style="width: 100%; border-radius: 16px; margin-bottom: 1rem;">
@@ -53,7 +50,15 @@
     <span>#IndieGame</span>
     <span>#DontScream</span>
     <span>#Recenzja</span>
-    <span>#
+    <span>#PsychologicznyStrach</span>
+    <span>#Blog4Games</span>
+  </footer>
+</article>
+
+      <h1>Witamy na blogu!</h1>
+      <div id="posts"></div>
+      
+    </section>
 
     <section id="comments">
       <h1>Komentarze</h1>
